# otservbr-global-archived

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .reviewdog.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CPPLINT.cfg  Compiling-with-debugging-information.md  DATABASE CONFIGURATION.txt  DATABASE.sql  Dockerfile.server.production  LICENSE.md  README-ES.md  README-PT.md  README.md  RESTART REMOVER.bat  appveyor.yml  autorestart.bat  basic_antirollback  captain-definition  changelog.md  client_assertions.txt  config.lua  config.lua.dev  config.lua.dist  config.lua.save  config.luabkp  debian.sh  docker-compose.yml  gesior_boosted_login.php  imbuements.xml  items.xml  login 11.49+.php  lost_tables.sql  readme.md  recompile.sh  (+7 more)
.github/: FUNDING.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yaml  bug_report.md  config.yml  missing-feature.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-mac.yml  build-ubuntu.yml  build-windows.yml  codacy-analysis.yml  codeql-analysis.yml  cpp-linter.yml  cpp-syntax.yml  lua-linter.yml  lua-syntax.yml  main.yml  reviewdog.yml  run-lua-tests.yml  sonar-analysis.yml  stale.yml  xml-syntax.yml
cmake/: FindGMP.cmake  FindLTO.cmake  FindMySQL.cmake  FindSpdlog.cmake  FindZLIB.cmake  Findspdlog.cmake
data/: global.lua  stages.lua  update.lua
data/XML/: admin.xml  events.xml  familiars.xml  gameservers.xml  gameworlds.xml  groups.xml  imbuements.xml  mounts.xml  outfits.xml  skillstages.xml  stages.xml  vocations.xml
data/actions/: actions.xml
data/addons/: Matrix.lua  database.lua  logger.lua  moses.lua  storage.lua  tableFunctions.lua
data/chatchannels/: chatchannels.xml
data/creaturescripts/: creaturescripts.xml
data/events/: events.xml
data/globalevents/: globalevents.xml
data/items/: atributos.md  items.otb  items.xml
data/lib/: dailyRewardLib.lua  lib.lua  libs.lua  lionrock.lua  modalwindow.lua  monsterNameById.lua  privateAids.lua  privateKeys.lua  rewardboss.lua
data/logs/: .gitignore
data/migrations/: 0.lua  1.lua  10.lua  11.lua  12.lua  (+22 more)
docker/: .gitignore  DOCKER.md  Dockerfile  Dockerfile.build  Dockerfile.database  Dockerfile.login  Dockerfile.server  Dockerfile.server.production  build-docker.sh  config.lua.docker.dist  docker-compose.production.yml  docker-compose.yml  run-docker.sh  test-server.sh
src/: CMakeLists.txt  IOBestiary.cpp  IOBestiary.h  account.cpp  account.h  account.hpp  actions.cpp  actions.h  ban.cpp  ban.h  baseevents.cpp  baseevents.h  bed.cpp  bed.h  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creaturecallback.h  creatureevent.cpp  creatureevent.h  cylinder.cpp  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasemanager.h  databasetasks.cpp  databasetasks.h  (+166 more)
src/config/: configmanager.cpp  configmanager.h
src/creatures/: creature.cpp  creature.h
src/creatures/appearance/mounts/: mounts.cpp
src/creatures/appearance/outfit/: outfit.cpp
src/creatures/combat/: combat.cpp  condition.cpp  condition.h  spells.cpp  spells.h
src/creatures/interactions/: chat.cpp  chat.h
src/creatures/monsters/: monster.cpp  monster.h  monsters.cpp  monsters.h
src/creatures/monsters/spawns/: spawn_monster.cpp
src/creatures/npc/: npc.cpp  npc.h
src/creatures/npcs/: npc.cpp  npc.h  npcs.cpp  npcs.h
src/creatures/npcs/spawns/: spawn_npc.cpp
src/creatures/players/: player.cpp  player.h
src/creatures/players/account/: account.cpp  account.hpp
src/creatures/players/grouping/: familiars.cpp  groups.cpp  guild.cpp  party.cpp
src/creatures/players/imbuements/: imbuements.cpp  imbuements.h
src/creatures/players/management/: ban.cpp  waitlist.cpp
src/creatures/players/vocations/: vocation.cpp  vocation.h
src/creatures/spawn/: spawn.cpp  spawn.h
src/database/: database.cpp  databasemanager.cpp  databasetasks.cpp
src/game/: game.cpp  game.h  gamestore.cpp  gamestore.h
src/game/movement/: position.cpp  teleport.cpp
src/game/scheduling/: scheduler.cpp  tasks.cpp
src/io/: fileloader.cpp  iobestiary.cpp  iobestiary.h  ioguild.cpp  iologindata.cpp  iologindata.h  iomap.cpp  iomap.h  iomapserialize.cpp  iomarket.cpp  iomarket.h
src/items/: bed.cpp  cylinder.cpp  item.cpp  item.h  items.cpp  items.h  thing.cpp  tile.cpp  tile.h  trashholder.cpp
src/items/containers/: container.cpp  container.h
src/items/containers/depot/: depotchest.cpp  depotchest.h  depotlocker.cpp  depotlocker.h
src/items/containers/inbox/: inbox.cpp  inbox.h
src/items/containers/mailbox/: mailbox.cpp  mailbox.h
src/items/containers/rewards/: reward.cpp  rewardchest.cpp
src/items/decay/: decay.cpp  decay.h
src/items/weapons/: weapons.cpp  weapons.h
src/lua/callbacks/: creaturecallback.cpp  creaturecallback.h
src/lua/creature/: actions.cpp  actions.h  creatureevent.cpp  creatureevent.h  events.cpp  events.h  movement.cpp  raids.cpp  raids.h  talkaction.cpp  talkaction.h
src/lua/global/: baseevents.cpp  globalevent.cpp
src/lua/modules/: modules.cpp  modules.h
src/lua/scripts/: luascript.cpp  luascript.h  scripts.cpp
src/map/: map.cpp  map.h
src/map/house/: house.cpp  house.h  housetile.cpp
src/security/: rsa.cpp  xtea.cpp
src/server/: server.cpp  signals.cpp
src/server/network/connection/: connection.cpp
src/server/network/message/: networkmessage.cpp  networkmessage.h  outputmessage.cpp  outputmessage.h
src/server/network/protocol/: protocol.cpp  protocolgame.cpp  protocolgame.h  protocollogin.cpp  protocolstatus.cpp
src/server/network/webhook/: webhook.cpp  webhook.h
src/utils/: CMakeLists.txt  const.h  enums.h  tools.cpp  wildcardtree.cpp
tests/: CMakeLists.txt  account_test.cpp  catch.hpp  main.cpp  test.cpp  test2.cpp
tools/: CMakeLists.txt  raid_xmltolua.txt
vc14/: TheForgottenServer.rc  Thumbs.db  arch32.props  arch64.props  otservbr-global.sln  otservbr-global.vcxproj  settings.props  theforgottenserver.vcxproj
(+17621 files in other folders)
